--- a/public/css/dash2.css
+++ b/public/css/dash2.css
@@ -495,6 +495,8 @@ nav .profile-details i {
     display: flex;
     flex-direction: row;
     max-width: 100vw;
+    justify-content: center;
+    align-items: center;
     flex-wrap: wrap;
     gap: 20px;
 }
