--- a/views/pages/adminDash.ejs
+++ b/views/pages/adminDash.ejs
@@ -19,11 +19,43 @@
           .hidden {
                display: none;
           }
+
+          .spin-block {
+               display: block !important;
+          }
+
+          .spin-hide {
+               display: none;
+          }
+
+          .spinnerrr {
+               width: 50px;
+               height: 50px;
+               border: 4px solid rgba(0, 0, 0, 0.2);
+               border-top: 4px solid #1eec4e;
+               /* Change the color as desired */
+               border-radius: 50%;
+               animation: spin 1s linear infinite;
+               margin: 0 auto;
+               margin-top: 2vh;
+               margin-bottom: 3vh;
+               /* Center vertically on the viewport */
+          }
+
+          @keyframes spin {
+               0% {
+                    transform: rotate(0deg);
+               }
+
+               100% {
+                    transform: rotate(360deg);
+               }
+          }
      </style>
 </head>
 
 <body>
-
+     <p hidden="true" id="profile_type">admin</p>
      <%- include('../partials/navbar.ejs',{isLoggedIn:login}) %>
 
           <div class="p-2 flex flex-row justify-center w-full bg-white text-dark_green">
@@ -49,73 +81,9 @@
                </ul>
           </div>
 
-          <div class="container parent w-100 bg-dark_green text-white">
-               <!-- SELLERS -->
-               <div class="w-1/4 OAAOBC mx-auto hidden px-4">
-                    <h1 class="text-3xl text-white mx-auto text-center">Sellers</h1>
-               </div>
-               <section
-                    class="container w-100 px-1 sellers-active sellers-group flex  flex-wrap flex-col md:flex-row gap-2 justify-center hidden">
-                    <!-- SELLER CARD -->
-                    <% for( let index=0; index < sellers.length; index++ ) { %>
-                         <div class="seller-info sm:w-100 lg:w-1/4 flex flex-col items-start
-                         border-2 border-gray-200 p-2 gap-px">
-                              <div class="name p-1">
-                                   Seller : <span class="font-extralight tracking-wider">
-                                        <%= sellers[index]['seller_fname'] %>
-                                   </span>
-                              </div>
-                              <div class="rating-avg p-1">
-                                   Avg Rating : <span class="font-extralight tracking-wider">
-                                        <%= sellers[index]['rating'] %> (<%= sellers[index]['numberRating'] %>)
-                                   </span>
-                              </div>
-                              <div class="avg-price p-1">
-                                   Country : <span class="font-extralight tracking-wider">
-                                        <%= sellers[index]['country'] %>
-                                   </span>
-                              </div>
-                              <div class="total-gigs p-1">
-                                   Gigs Done So far : <span class="font-extralight tracking-wider">
-                                        <%= sellers[index]['completed'] %>
-                                   </span>
-                              </div>
-                              <div class="description p-1">
-                                   About :
-                                   <span class="font-light">
-                                        <%= sellers[index]['seller_desc'] %>
-                                   </span>
-                              </div>
-                         </div>
-                         <% } %>
-               </section>
-               <!-- END -->
-
-               <!-- OVERVIEW TEXT -->
-               <section class="overview-text container flex justify-center items-center flex-col">
-                    <h1 class="text-3xl text-white mx-auto">Details</h1>
-                    <div>
-                         <div class="text-lg p-1">
-                              Total Sellers : <%= sellers.length %>
-                         </div>
-                         <div class="text-lg p-1">
-                              Total Gigs : <%= services.length %>
-                         </div>
-                         <div class="text-lg p-1">
-                              Total Users : <%= users.length %>
-                         </div>
-                         <div class="text-lg p-1">
-                              Total Ratings : <%= ratings.length %>
-                         </div>
-                         <div class="text-lg p-1">
-                              Total Avg Rating : <%= r %>
-                         </div>
-                    </div>
-               </section>
-
+          <div class="container parent w-100 bg-dark_green text-white" id="parent1">
+               <div class="spinnerrr spin-hide"></div>
           </div>
-
-
 
           <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
                integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
@@ -125,25 +93,111 @@
                crossorigin="anonymous"></script>
 
           <script>
-               const sellers = document.querySelector('.sellers-active');
-               const groupText = document.querySelector('.overview-text');
-               document.querySelector('.seller-btn').addEventListener('click', (e) => {
-                    sellers.classList.remove('hidden');
-                    document.querySelector('.OAAOBC').classList.add('visible');
-                    document.querySelector('.OAAOBC').classList.remove('hidden');
-                    sellers.classList.add('visible');
-                    groupText.classList.remove('visible');
-                    groupText.classList.add('hidden');
-               });
-               document.querySelector('.dashboard-btn').addEventListener('click', (e) => {
-                    sellers.classList.remove('visible');
-                    document.querySelector('.OAAOBC').classList.add('hidden');
-                    document.querySelector('.OAAOBC').classList.remove('visible');
-                    sellers.classList.add('hidden');
-                    groupText.classList.remove('hidden');
-                    groupText.classList.add('visible');
-               })
+               const func2 = async () => {
+                    const sellers = document.querySelector('.sellers-active');
+                    const groupText = document.querySelector('.overview-text');
+                    document.querySelector('.seller-btn').addEventListener('click', (e) => {
+                         sellers.classList.remove('hidden');
+                         document.querySelector('.OAAOBC').classList.add('visible');
+                         document.querySelector('.OAAOBC').classList.remove('hidden');
+                         sellers.classList.add('visible');
+                         groupText.classList.remove('visible');
+                         groupText.classList.add('hidden');
+                    });
+                    document.querySelector('.dashboard-btn').addEventListener('click', (e) => {
+                         sellers.classList.remove('visible');
+                         document.querySelector('.OAAOBC').classList.add('hidden');
+                         document.querySelector('.OAAOBC').classList.remove('visible');
+                         sellers.classList.add('hidden');
+                         groupText.classList.remove('hidden');
+                         groupText.classList.add('visible');
+                    })
+               }
 
+               const func1 = async () => {
+                    const s = document.getElementById('profile_type').innerHTML;
+                    document.querySelector(".spinnerrr").classList.remove("spin-hide");
+                    document.querySelector(".spinnerrr").classList.add("spin-block");
+                    const res = await fetch(`http://localhost:5500/app/getProfileData?type=${s}`);
+                    const { sellers, services, users, orders, ratings, r } = await res.json();
+                    document.querySelector(".spinnerrr").classList.remove("spin-block");
+                    document.querySelector(".spinnerrr").classList.add("spin-hide");
+
+                    let str = '';
+
+                    str += `
+                    <div class="w-1/4 OAAOBC mx-auto hidden px-4">
+                         <h1 class="text-3xl text-white mx-auto text-center">Sellers</h1>
+                    </div>
+                    <section
+                         class="container w-100 px-1 sellers-active sellers-group flex  flex-wrap flex-col md:flex-row gap-2 justify-center hidden">`
+
+                    
+                    for( let index=0; index < sellers.length; index++ ) {
+                         str += `<div class="seller-info sm:w-100 lg:w-1/4 flex flex-col items-start
+                              border-2 border-gray-200 p-2 gap-px">
+                                   <div class="name p-1">
+                                        Seller : <span class="font-extralight tracking-wider">
+                                             ${sellers[index]['seller_fname']}
+                                        </span>
+                                   </div>
+                                   <div class="rating-avg p-1">
+                                        Avg Rating : <span class="font-extralight tracking-wider">
+                                             ${sellers[index]['rating']} (${sellers[index]['numberRating']})
+                                        </span>
+                                   </div>
+                                   <div class="avg-price p-1">
+                                        Country : <span class="font-extralight tracking-wider">
+                                             ${sellers[index]['country']}
+                                        </span>
+                                   </div>
+                                   <div class="total-gigs p-1">
+                                        Gigs Done So far : <span class="font-extralight tracking-wider">
+                                             ${sellers[index]['completed']}
+                                        </span>
+                                   </div>
+                                   <div class="description p-1">
+                                        About :
+                                        <span class="font-light">
+                                             ${sellers[index]['seller_desc']}
+                                        </span>
+                                   </div>
+                              </div>`
+                    } 
+
+                    str += `</section>
+                    <section class="overview-text container flex justify-center items-center flex-col">
+                         <h1 class="text-3xl text-white mx-auto">Details</h1>
+                         <div>
+                              <div class="text-lg p-1">
+                                   Total Sellers : ${sellers.length}
+                              </div>
+                              <div class="text-lg p-1">
+                                   Total Gigs : ${services.length}
+                              </div>
+                              <div class="text-lg p-1">
+                                   Total Users : ${users.length}
+                              </div>
+                              <div class="text-lg p-1">
+                                   Total Ratings : ${ratings.length}
+                              </div>
+                              <div class="text-lg p-1">
+                                   Total Avg Rating : ${r}
+                              </div>
+                         </div>
+                    </section>
+                    `
+                    document.getElementById('parent1').innerHTML = str;
+               }
+
+               try {
+                    func1();
+                    setTimeout(() => {
+                         func2();
+                    }, 2000);
+               } catch (err) {
+                    alert('some error occurred');
+               }
           </script>
 
           <%- include('../partials/footer.ejs') %>
