--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -18,6 +18,36 @@
       height: 100%;
       width: 100%;
     }
+    .spin-block {
+      display: block !important;
+    }
+
+    .spin-hide {
+      display: none !important;
+    }
+
+    .spinnerrr {
+      width: 50px;
+      height: 50px;
+      border: 4px solid rgba(0, 0, 0, 0.2);
+      border-top: 4px solid #1eec4e;
+      /* Change the color as desired */
+      border-radius: 50%;
+      animation: spin 1s linear infinite !important;
+      margin: 0 auto;
+      margin-top: 2vh;
+      margin-bottom: 3vh;
+    }
+
+    @keyframes spin {
+      0% {
+        transform: rotate(0deg);
+      }
+
+      100% {
+        transform: rotate(360deg);
+      }
+    }
   </style>
 </head>
 
@@ -27,35 +57,23 @@
 
     <div style="margin: 0 auto;display: flex;flex-direction: column;justify-content: space-evenly;align-items: center;">
       <div class="trend">
-        <h1 style="font-size: xx-large;color: #fafafa;">Popular services</h1>
+        <h1 style="font-size: xx-large;color: #fafafa;">Popular services for you!</h1>
       </div>
+
+      <div class="spinnerrr spin-hide"></div>
 
       <div style="padding-top: 50px; padding-bottom: 50px;" class="boxes">
         <div class="swiper mySwiper">
-          <div class="swiper-wrapper">
-            <% services.forEach(s=>{ %>
-              <div class="swiper-slide">
-                <div class="box">
-                  <div class="image">
-                    <img src="<%= s.main_img %>" alt="app development" />
-                  </div>
-                  <div class="content">
-                    <h3>
-                      <%= s.service_type.replace('_',' ').toUpperCase() %></h3>
-                  <p>
-                    <%= s.seller_desc %>
-                  </p>
-                </div>
-              </div>
-            </div>
-          <% }) %>
+          <div class="swiper-wrapper" id="somet">
+
+          </div>
         </div>
         <div class="swiper-button-next"></div>
         <div class="swiper-button-prev"></div>
         <div class="swiper-pagination"></div>
       </div>
     </div>
-  </div>
+    </div>
 
 
     <div class="get_started">
@@ -67,9 +85,9 @@
 
     <div style="margin: 0 auto;display: flex;flex-direction: column;justify-content: space-evenly;align-items: center;">
       <div class="trend">
-        <h1 style="font-size: xx-large;color: #fafafa;">Popular services</h1>
+        <h1 style="font-size: xx-large;color: #fafafa;">Other Popular services!</h1>
       </div>
-  
+
       <div style="padding-top: 50px; padding-bottom: 50px;" class="boxes">
         <div class="swiper mySwiper">
           <div class="swiper-wrapper">
@@ -186,13 +204,51 @@
         },
         autoplay: {
           delay: 3000,
-          waitForTransition: true
         },
         navigation: {
           nextEl: ".swiper-button-next",
           prevEl: ".swiper-button-prev",
         },
       });
+
+      const func = async () => {
+        document.querySelector(".spinnerrr").classList.remove("spin-hide");
+        document.querySelector(".spinnerrr").classList.add("spin-block");
+
+        const res = await fetch('http://localhost:5500/home');
+        const data = await res.json();
+        
+        document.querySelector(".spinnerrr").classList.remove("spin-block");
+        document.querySelector(".spinnerrr").classList.add("spin-hide");
+
+        let str = '';
+        Array.from(data).forEach((s) => {
+          str += `
+              <div class="swiper-slide">
+                <div class="box">
+                  <div class="image">
+                    <img class="adjust" src=" ${s.main_img}" alt="domains" />
+                  </div>
+                  <div class="content">
+                    <h3>
+                      ${s.service_type.replace('_', ' ').toUpperCase()}
+                    </h3>
+                  <p>
+                    ${s.seller_desc}
+                  </p>
+                </div>
+              </div>
+            </div>`
+        });
+
+        document.getElementById('somet').innerHTML = str; 
+      }
+
+      try {
+        func();
+      } catch (err) {
+        alert('some error occurred');
+      }
     </script>
 
     <%- include('../partials/footer.ejs') %>
