changed some files

--- a/views/pages/product.ejs
+++ b/views/pages/product.ejs
@@ -301,6 +301,7 @@
 			})
 
 			btn2.addEventListener('click', async (e) => {
+				console.log('inside the btn2')
 				const price = document.getElementById('price2').innerHTML;
 				const type = document.getElementById('type_service2').innerHTML;
 
